--- a/style.css
+++ b/style.css
@@ -150,6 +150,11 @@ a {
   margin-bottom: 10px;
 }
 
+.space-between-small {
+  display: flex;
+  justify-content: center;
+}
+
 h2 {
   font-family: Arial,Helvetica Neue,Helvetica,sans-serif;
   font-size: 1em;
