--- a/style.css
+++ b/style.css
@@ -1,11 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Red+Hat+Text:wght@400;700&display=swap');
 
 :root{
---color: #333; 
+color: #333; 
 }
 
 body {
   font-family: 'Red Hat Text', sans-serif;
+
 }
 
 .container {
